Fixed centered menu items; Fixed spacing on 404 page

--- a/src/assets/zune.css
+++ b/src/assets/zune.css
@@ -3543,6 +3543,7 @@ ul.menu ul li, ul.menu_v ul li {
 
 ul.menu, ul.menu ul, ul.menu_v, ul.menu_v ul {
     height: 26px;
+    text-align: left;
 }
 
 ul.menu_v {
